--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -33,3 +33,4 @@ jobs:
     uses: apache/flink-connector-shared-utils/.github/workflows/ci.yml@ci_utils
     with:
       flink_version: ${{ matrix.flink }}
+      jdk_version: ${{ matrix.jdk }}
