--- a/.github/workflows/push_pr.yml
+++ b/.github/workflows/push_pr.yml
@@ -25,11 +25,13 @@ jobs:
   compile_and_test:
     strategy:
       matrix:
-        flink: [1.16-SNAPSHOT, 1.17-SNAPSHOT, 1.18-SNAPSHOT, 1.19-SNAPSHOT]
+        flink: [ 1.16-SNAPSHOT, 1.17-SNAPSHOT, 1.18-SNAPSHOT, 1.19-SNAPSHOT ]
         jdk: [ 8, 11 ]
         include:
-          - flink: [ 1.18-SNAPSHOT, 1.19-SNAPSHOT]
-            jdk: [ 17 ]
+          - flink: 1.18-SNAPSHOT
+            jdk: 17
+          - flink: 1.19-SNAPSHOT
+            jdk: 17
     uses: apache/flink-connector-shared-utils/.github/workflows/ci.yml@ci_utils
     with:
       flink_version: ${{ matrix.flink }}
